# lbb-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
contracts/: openapi.json
examples/: embedding_search.py
lbb/: __init__.py  _async_client.py  _client_base.py  _sync_client.py  _version.py  client.py  local.py  models.py
tests/: test_client.py  test_contract_routes.py  test_public_api.py  typecheck_dx.py
