[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "littlebigbrain"
dynamic = ["version"]
description = "Python client for the little big brain graph + hybrid search HTTP API"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "little big brain" }]
requires-python = ">=3.10"
dependencies = ["httpx>=0.27", "pydantic>=2"]
keywords = ["little-big-brain", "graph", "search", "sdk"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]

[project.urls]
Documentation = "https://docs.littlebigbrain.com/sdks/python/"
Issues = "https://github.com/littlebigbrains/lbb-python/issues"
Repository = "https://github.com/littlebigbrains/lbb-python"

[project.optional-dependencies]
# Regenerate lbb/models.py from ../../contracts/openapi.json.
dev = [
  "build==1.5.1",
  "black==26.5.1",
  "datamodel-code-generator==0.63.0",
  "isort==8.0.1",
  "mypy>=1.15",
  "packaging==26.2",
  "pytest>=8",
  "pytest-cov>=6",
  "ruff>=0.11",
  "twine==6.2.0",
]

[tool.setuptools.packages.find]
include = ["lbb*"]

[tool.setuptools.package-data]
lbb = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "lbb._version.__version__" }

[tool.ruff]
line-length = 100
# lbb/models.py is generated by datamodel-code-generator; not hand-maintained.
extend-exclude = ["lbb/models.py"]

[tool.ruff.lint]
# pyflakes + the real pycodestyle errors, import-sorting, pyupgrade, bugbear.
select = ["E4", "E7", "E9", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true

# `_client_base` intentionally implements one route table over two transports:
# sync `_model_request` returns a model while async `_model_request` returns an
# awaitable resolving to that model. Public `LbbClient`/`AsyncLbbClient` and
# namespace overrides declare the exact generated response type, and contract
# tests require every sync/async counterpart. These narrowly-scoped exceptions
# cover only the internal inheritance mechanics; strict checking remains on for
# every other module and error category.
[[tool.mypy.overrides]]
module = "lbb._client_base"
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
module = "lbb._sync_client"
disable_error_code = ["redundant-cast"]

[[tool.mypy.overrides]]
module = "lbb._async_client"
disable_error_code = ["override", "misc"]

[tool.coverage.run]
source = ["lbb"]
omit = ["*/lbb/models.py", "*/lbb/local.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 75
